--- a/src/app/task/task.component.html
+++ b/src/app/task/task.component.html
@@ -1,5 +1,6 @@
 <h1>MEAN Task Manager</h1>
 
+
 <a href="#" (click)="displayForm()">Add a Task</a>
 <section *ngIf="showForm">
   <fieldset class="form-group">
@@ -7,7 +8,7 @@
     <input name="name" id="name" required [(ngModel)]="name" />
   </fieldset>
   <fieldset class="form-group">
-    <label class="control-label col-md-2">Complete: *</label>
+    <label class="control-label col-md-2">Complete: </label>
     <input name="complete" id="complete" type="checkbox" [(ngModel)]="complete" />
   </fieldset>
   <fieldset class="form-group">
@@ -16,9 +17,8 @@
   </fieldset>
   <input type="hidden" name="_id" id="_id" [(ngModel)]="_id" />
   <button class="offset-2 btn btn-primary" (click)="addTask()" *ngIf="!_id">Save</button>
-<button class="offset-2 btn btn-primary" (click)="updateTask()" *ngIf="_id">Save</button>
+  <button class="offset-2 btn btn-primary" (click)="updateTask()" *ngIf="_id">Save</button>
   <button class="btn btn-success" (click)="clearForm()">Reset</button>
-
 </section>
 
 <table class="table table-striped table-hover">
@@ -33,7 +33,7 @@
     <td>{{task.priority}}</td>
     <td>{{task.complete}}</td>
     <td>
-     <a class="btn btn-info text-white" (click)="selectTask(task)">Edit</a>
+      <a class="btn btn-info text-white" (click)="selectTask(task)">Edit</a>
       <a class="btn btn-danger text-white" (click)="deleteTask(task._id)">Delete</a>
     </td>
   </tr>
